# Face-Rate

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Backend/app/: main.py  model_classes.py  utils.py
Frontend/: index.html  main.js  style.css
docs/: main.js
src/Backend/app/: main.py  utils.py
src/Frontend/: index.html
tests/: test_predict.py
